docs: add swagger api foor v1.Article
